--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
 <body>
 <div>
 
-    <h4> <h3>Nogary</h3> 회원가입을 위한 본인 확인 메일 입니다.</h4><br/><br/>
+    <h4> <h3>Nogary</h3> 회원가입을 위한 본인 확인 메일 입니다.</h4>
 
 	<h3> 안녕하십니까. Nogary 입니다.</h3>
     <h3> 본인 확인을 위하여 아래의 ID 및 인증 번호를 확인하신 후, 회원 가입 창에 입력하여 주시기바랍니다.</h3>
