--- a/test.html
+++ b/test.html
@@ -1,12 +1,11 @@
+<!DOCTYPE html>
 <html lang="ko">
 <head>
 </head>
 <body>
 <div>
-    <img src="http://localhost:8080/file/get?name=profileImg/tLvpFxSCfVkLtMN1lJL5I.jpeg"/>
+    <canvas class="canvas"/>
 </div>
+<script type = "text/javascript" src="GIF.js"></script>
 </body>
-<script>
-
-</script>
 </html>
