--- a/humorpage/public/index.html
+++ b/humorpage/public/index.html
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Nogary</title>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><title>humorpage</title><link rel="canonical" href="https://seono.io"/><meta name="description" content="humorpage"/></head><body><div id="root"></div><script src="/runtime-ac48e989953a865cec8f.js"></script><script src="/chunk-95e884667d82dd954c1b.js"></script><script src="/chunk-528f9160f62755447334.js"></script></body></html>
