--- a/mobile/src/static/index.html
+++ b/mobile/src/static/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
     <link rel="icon" href="favicon.ico" />
     <title><%= htmlWebpackPlugin.options.title %></title>
     <link rel="canonical" href="<%= htmlWebpackPlugin.options.url %>" />
