--- a/test.html
+++ b/test.html
@@ -4,6 +4,6 @@
 <meta charset=utf-8 />
 <title>Auto Resize Textarea</title>
 <body>
-  <img src="http://localhost:8080/api/file/get?name=/test.jpg" alt=""/>
+  <img src="https://nogary-test.s3.ap-northeast-2.amazonaws.com/2021/06/25/test.jpg" alt=""/>
 </body>
 </html>
